fixed alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1174,7 +1174,7 @@ button:hover {
   
   .home {
     display: flex;
-    justify-content: ;
+    justify-content: space-between;
     width: 100%;
     padding-top: 2vw;
   }
